# autorigami

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  ODE_SPIRAL_FINDINGS.md  README.md  main.py  pyproject.toml  pyrightconfig.json
.cache/clangd/index/: argument_vector.h.44848F33CBB9ADAA.idx  attr.h.9111BE4343C05656.idx  buffer_info.h.70E60A43287AC0C4.idx  cast.h.D1F9DA0E3ADD0670.idx  class.h.2133B4F570670AE0.idx  common.h.1C48A0A5A609193B.idx  complex.h.45B7054E62E42EE7.idx  cpp_conduit.h.D2326AF19FFDF0CA.idx  descr.h.362474CCA89A6A03.idx  dynamic_raw_ptr_cast_if_possible.h.6127B87A60F980EB.idx  exception_translation.h.9BE8F94DBC97EB12.idx  function_record_pyobject.h.353953FF78CB8A33.idx  gil.h.BE719CA8A5BA90D6.idx  gil_safe_call_once.h.7BA1A0BA87675C67.idx  gil_simple.h.A8B5F8EED8FB8CC5.idx  holder_caster_foreign_helpers.h.B50B8E9D94EBBB63.idx  init.h.373BC1B3B40FE4DE.idx  internals.h.751EBB7D8D2A22CC.idx  module.cpp.53973EA12EBC6C64.idx  native_enum_data.h.7A8FA90404D18C3D.idx  numpy.h.71EABFB0BD4D7E21.idx  options.h.138EF26496521391.idx  pybind11.h.9B820FEF811EFB09.idx  pybind11_namespace_macros.h.0D096B9F4F7975BD.idx  pybind11_platform_abi_id.h.39D0081F256E6FCF.idx  pytypes.h.927A7C39AC7CBA5F.idx  struct_smart_holder.h.081801A3140B7DA4.idx  trampoline_self_life_support.h.FF3547E6D07B5602.idx  type_caster_base.h.AA55E67791C5B7E2.idx  typeid.h.31839283374EA270.idx  typing.h.42F51E4CD0B5055F.idx  using_smart_holder.h.80375F515001DFD6.idx  validation.cpp.14A72F39A2C26085.idx  validation.h.802041618CF17875.idx  validation_bindings.cpp.0747EED6FE996AB9.idx  value_and_holder.h.2B2BBFEA355DC0F1.idx  wrap_include_python_h.h.8AC934FC4DA3DE6B.idx
.github/workflows/: wheels.yml
assets/: ellipsoid.stl
cpp/: CMakeLists.txt
cpp/autorigami/: splines.h  validation.h  vec3.h
cpp/bindings/: module.cpp  validation_bindings.cpp
cpp/cmake/: Dependencies.cmake
cpp/include/autorigami/: curvature_math.h  generator.h  geometry.h  interval.h  ivec3.h  optimization.h  splines.h  utils.h  validation.h
cpp/include/autorigami/acap/: toolpath_stats.h
cpp/include/autorigami/generator/: energy.h  initialization.h  optimize_end_of_spline.h  seed_point.h
cpp/include/autorigami/validation/: nonlocal_distance.h
cpp/splines/: splines.cpp
cpp/src/acap/: toolpath_stats.cpp
cpp/src/bindings/: acap_bindings.cpp  generator_bindings.cpp  geometry_bindings.cpp  module.cpp  optimization_bindings.cpp  validation_bindings.cpp
cpp/src/curvature/: curvature_math.cpp
cpp/src/generator/: energy.cpp  generator.cpp  initialization.cpp  optimize_end_of_spline.cpp  seed_point.cpp
cpp/src/geometry/: geometry.cpp  separation.cpp
cpp/src/optimization/: tangent_point.cpp
cpp/src/splines/: splines.cpp
cpp/src/utils/: spatial_hierarchy.cpp
cpp/src/validation/: nonlocal_distance.cpp  validation.cpp
cpp/tests/: splines_test.cpp
cpp/tests/curvature/: curvature_math_test.cpp
cpp/tests/generator/: seed_point_test.cpp
cpp/tests/splines/: splines_test.cpp
cpp/tests/validation/: nonlocal_distance_test.cpp  validation_test.cpp
cpp/validation/: validation.cpp
docs/: quasistatic_gravity_audit.md  quasistatic_gravity_handoff.md  quasistatic_gravity_spec.md
experiments/offset_lanes_preview/: README.md  preview_offset_lanes.py  relax_production.py  viz_steps.py
notebooks/: demo1.ipynb
plots/trace_energy/: trace.json
plots/trace_energy_disk_1000/: trace.json
plots/trace_energy_disk_v1/: trace.json
plots/trace_energy_disk_v2/: trace.json
plots/trace_energy_disk_v3/: trace.json
plots/trace_energy_minimal/: trace.json
plots/trace_energy_r14_full/: trace.json
plots/trace_energy_r14_spread/: trace.json
plots/trace_energy_w40/: trace.json
scripts/: build_native.sh  generate_test_shapes.py  plot_selected_candidate_separation.py
scripts/viz/: dna_base_centerline_angle.py  dna_curvature_radius.py  dna_molecular_graph.py  loop.py  minimum_arclength.py  parallel_dna_crossover.py  self_intersection_curvature_bound.py
src/: __init__.py  lattice.py  run_optimize.py
src/autorigami/: _native.pyi  acap_integration.py  dna.py  global_spiral.py  mesh_io.py  metrics.py  parametrization.py  qc_plots.py  types.py  validation.py
src/autorigami.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/autorigami/geometry/: curvature.py  reparametrize.py  separation.py  validation.py
src/autorigami/gravity/: __init__.py  constraints.py  projection.py  quadratic_step.py  quasistatic.py  workloads.py
src/autorigami/mesh_io/: __init__.py  dna_render.py  tube_export.py
src/autorigami/optimization/: axis_packing.py  constraints.py  energies.py  fractional_sobolev.py  geometric_hessian.py  inextensibility.py  nonlinear_projection.py  projected_flow.py  second_order.py  separation.py  workloads.py
src/autorigami/shape_generation/: __init__.py  generate_ellipsoid.py  generate_y_junction_winding.py  generate_y_junction_wrapper.py  optimize_y_junction_winding_jax.py  optimize_y_junction_winding_turnwise.py
src/autorigami/spiral_generation/: __init__.py  control_point_spiral.py  simple_spiral.py  (+5 more)
src/curvepack/: __init__.py  bezier.py  bspline.py  export_svg.py  geometry.py  loss.py  optimize.py  optimize_checkpoint.py  optimize_init.py  optimize_loss.py  optimize_pairs.py  optimize_types.py  sdf.py  svg_io.py
src/utils/: checkpoint_gif.py  debug.py  debug_helpers.py  download_data.py  plot_metrics.py  plot_raster.py
tests/: test_acap_integration.py  test_bezier.py  test_bspline.py  test_control_point_spiral.py  test_fractional_sobolev.py  test_full_double_spiral.py  test_geometry.py  test_honeycomb_lattice.py  test_inextensible_axis_packing.py  test_loss_terms.py  test_native_geometry.py  test_optimization.py  test_optimize_smoke.py  test_optimize_tangent_point_smoke.py  test_parametrization.py  test_projected_flow.py  test_projected_separation.py  test_quasistatic_gravity.py  test_sdf.py  test_svg_io.py  test_tangent_point.py  test_tangent_point_energy.py  test_tube_model.py  test_validation.py  test_validation_render.py
typings/autorigami/: _native.pyi
(+20 files in other folders)
