[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pybind11>=2.13",
]
build-backend = "scikit_build_core.build"

[project]
name = "autorigami"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=2.0.0",
    "rtree>=1.2.0",
    "scipy>=1.14.0",
    "trimesh>=4.11.5",
]

[tool.scikit-build]
wheel.packages = ["src/autorigami"]
sdist.include = [
    "CMakeLists.txt",
    "cpp/CMakeLists.txt",
    "cpp/cmake/Dependencies.cmake",
    "cpp/bindings/module.cpp",
    "src/autorigami/_native.pyi",
    "src/autorigami/py.typed",
]
cmake.build-type = "Release"

[tool.cibuildwheel]
build-frontend = "build[uv]"
build-verbosity = 1
test-command = "python -c \"import autorigami._native as native; assert native.add(2, 3) == 5\""

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[dependency-groups]
dev = [
    "cibuildwheel>=2.23.3",
    "cmake>=3.30",
    "ninja>=1.11",
    "pybind11>=2.13",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
]
