[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pybind11>=2.13",
]
build-backend = "scikit_build_core.build"

[project]
name = "autorigami"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "jaxtyping>=0.3.11",
    "numpy>=2.0.0",
    "pillow>=12.2.0",
    "pyvista>=0.48.4",
    "scipy>=1.14.0",
    "trimesh>=4.11.5",
]

[tool.scikit-build]
wheel.packages = ["src/autorigami"]
sdist.include = [
    "CMakeLists.txt",
    "cpp/CMakeLists.txt",
    "cpp/cmake/Dependencies.cmake",
    "cpp/include/autorigami/geometry.h",
    "cpp/include/autorigami/optimization.h",
    "cpp/include/autorigami/utils.h",
    "cpp/src/bindings/geometry_bindings.cpp",
    "cpp/src/bindings/optimization_bindings.cpp",
    "cpp/src/bindings/module.cpp",
    "cpp/src/geometry/separation.cpp",
    "cpp/src/optimization/tangent_point.cpp",
    "cpp/src/utils/spatial_hierarchy.cpp",
    "src/autorigami/_native.pyi",
    "src/autorigami/py.typed",
]
cmake.build-type = "Release"

[tool.cibuildwheel]
build-frontend = "build[uv]"
build-verbosity = 1
test-command = "python -c \"import autorigami._native as native; assert native.segment_segment_distance([]) == []\""

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[dependency-groups]
dev = [
    "cibuildwheel>=4.1.0",
    "cmake>=3.30",
    "ninja>=1.11",
    "pybind11>=2.13",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
